<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/nav_debts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_debts" />
        <item
            android:id="@+id/nav_budgets"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_budgets" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_business" />
    </group>
</menu>