<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.whereismy.money.ui.home.HomeFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="com.whereismy.money.ui.section.SectionFragment"
        android:label="@string/menu_accounts"
        tools:layout="@layout/fragment_section" />

    <fragment
        android:id="@+id/nav_transactions"
        android:name="com.whereismy.money.ui.transactions.TransactionFragment"
        android:label="@string/menu_transactions"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/nav_debts"
        android:name="com.whereismy.money.ui.debts.DebtFragment"
        android:label="@string/menu_debts"
        tools:layout="@layout/fragment_debt" />

    <fragment
        android:id="@+id/nav_budgets"
        android:name="com.whereismy.money.ui.budgets.BudgetFragment"
        android:label="@string/menu_budgets"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.whereismy.money.ui.reports.ReportFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.whereismy.money.ui.section.SectionFragment"
        android:label="@string/menu_business"
        tools:layout="@layout/fragment_section" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.whereismy.money.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>