<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_title"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/status_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/auth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/toggle_auth_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/workspace_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/workspace_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/workspace_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/workspace_name" />

            <Spinner
                android:id="@+id/workspace_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/workspace_types" />

            <Button
                android:id="@+id/create_workspace_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_workspace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/account_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/account_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/account_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_name" />

            <Spinner
                android:id="@+id/account_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/account_types" />

            <EditText
                android:id="@+id/account_balance_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/starting_balance"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account_button" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>